# webspec-index

./: .gitignore  Cargo.toml  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/webspec_index/: __init__.py  _webspec_index.pyi
bindings/python/src/: lib.rs  types.rs
bindings/python/tests/: test_analyze.py  test_offline.py  test_queries.py
data/: w3c_specs.json
editors/firefox/: README.md  background.js  content.js  install.sh  manifest.json
editors/vscode/: .vscodeignore  LICENSE  README.md  build.js  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
scripts/: release.sh
src/: format.rs  ietf.rs  lib.rs  main.rs  model.rs  native_messaging.rs  python.rs  spec_list.rs  spec_registry.rs
src/analyze/: coverage.rs  file.rs  matcher.rs  mod.rs  orchestrate.rs  scanner.rs  searchfox.rs
src/db/: mod.rs  queries.rs  schema.rs  write.rs
src/fetch/: github.rs  mod.rs  snapshot.rs  whatpr.rs
src/lsp/: coverage.rs  hover.rs  matcher.rs  mod.rs  scanner.rs  server.rs  steps.rs
src/parse/: algorithms.rs  idl.rs  idl_defs.rs  markdown.rs  mod.rs  references.rs  sections.rs
src/provider/: github.rs  gpuweb.rs  ietf.rs  mod.rs  tc39.rs  w3c.rs  whatwg.rs
tests/: analyze_integration.rs
tests/fixtures/algorithms/: bikeshed_algorithm.html  mixed_definitions_algorithms.html  wattsi_navigate.html
tests/fixtures/analyze/scoping/: class_members.cpp  nested.cpp  same_indent_replace.cpp  spec_data.json
tests/fixtures/definitions/: bikeshed_definition.html  definition_with_code.html  wattsi_definition.html
tests/fixtures/ecmarkup/: tostring.html  undefined_type.html
tests/fixtures/headings/: bikeshed_heading.html  wattsi_heading.html
tests/fixtures/idl/: dictionary.html  interface.html  mixed_idl_definitions.html
tests/fixtures/lsp/navigate/: expected.json  input.cpp  spec_navigate.json
tests/test_lsp/: test_coverage.py  test_hover.py  test_integration.py  test_matcher.py  test_scanner.py  test_steps.py
webspec_index/: __init__.py  __main__.py  mcp.py
webspec_index/lsp/: __init__.py  coverage.py  hover.py  matcher.py  scanner.py  server.py  steps.py
