[package]
name = "webspec-index"
version = "0.5.0"
edition = "2021"
description = "Query WHATWG/W3C/TC39 web specifications from the command line"
license = "MIT"
repository = "https://github.com/jnjaeschke/webspec-index"
exclude = ["editors/", ".github/", "SKILL.md"]

[lib]
name = "webspec_index"

[[bin]]
name = "webspec-index"
path = "src/main.rs"

[dependencies]
# HTML parsing
scraper = "0.25"
html5ever = "0.38"
markup5ever_rcdom = "0.35"  # TODO: 0.36 conflicts with scraper's version

# HTTP client
reqwest = { version = "0.13", features = ["gzip", "json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Error handling
anyhow = "1.0"

# HTML to Markdown
htmd = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
async-trait = "0.1"

# LSP
tower-lsp = "0.20"
regex = "1"
strsim = "0.11"
dashmap = "6"

# Version checking
moz-cli-version-check = "0.2"

# SIGPIPE handling
libc = "0.2"

[dev-dependencies]
tempfile = "3.24"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
