[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "webspec-index"
dynamic = ["version"]
description = "Query WHATWG/W3C web specifications for AI agents and developers"
authors = [{name = "Jan Jaeschke"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["whatwg", "w3c", "specifications", "mcp", "ai", "dom", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "click>=8.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "maturin>=1.0",
]

[project.scripts]
webspec-index = "webspec_index.__main__:cli"

[project.urls]
Homepage = "https://github.com/jnjaeschke/webspec-index"
Repository = "https://github.com/jnjaeschke/webspec-index"
Issues = "https://github.com/jnjaeschke/webspec-index/issues"

[tool.maturin]
module-name = "webspec_index._webspec_index"
features = ["extension-module"]
