[package]
name = "webspec-index-python"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Python bindings for webspec-index"
repository = "https://github.com/jnjaeschke/webspec-index"
publish = false

[lib]
name = "_webspec_index"
crate-type = ["cdylib"]

[dependencies]
webspec-index = { path = "../.." }
pyo3 = { version = "=0.29.0", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
